.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Commit_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Changed_By__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Changed_By__c</formula>
        <label>Changed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Comments__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Commit__c</fullName>
        <label>Commit</label>
        <referenceTo>Flosum__Commit__c</referenceTo>
        <relationshipLabel>Commit Manifest</relationshipLabel>
        <relationshipName>Commit_Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_By__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Committed_By__c</formula>
        <label>Committed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_On__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Committed_On__c</formula>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_History__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component History</label>
        <referenceTo>Flosum__Component_History__c</referenceTo>
        <relationshipLabel>Commit Manifest</relationshipLabel>
        <relationshipName>Commit_Manifest</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Flosum__Component_History__r.Flosum__Component__c ,  Flosum__Component_History__r.Flosum__Component__r.Flosum__Component_Name__c , &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <formula>TEXT(Flosum__Component_History__r.Flosum__Component__r.Flosum__Component_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Changed_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Commit Manifest</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Commit Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commit Manifest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>